--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,53 @@
-#container {
+ion-content {
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-top: 0;
+  padding-bottom: 0px;
+  --background: linear-gradient(to bottom, #097973, #103479, #3a045e);
+}
+
+.background-div {
+  height: 100%;
+  background-image: url('../../assets/images/Game_Cover.PNG');
+  background-attachment: fixed;
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   text-align: center;
+}
 
-  position: absolute;
-  left: 0;
+.column {
+  text-align: center;
+  margin-left: 100px;
+  margin-right: 100px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  flex: 1;
+}
+
+
+.division {
+  width: 100%;
+  box-sizing: border-box;
+  padding: 5px;
+  text-align: center;
+}
+
+ion-footer {
+  padding: 0;
+  height: 60px;
+  bottom: 0;
   right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+  left: 0;
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
-}
-
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
-}
-
-#container a {
-  text-decoration: none;
+ion-footer img {
+  height: 80px;
+  width: 160px;
+  object-fit: contain;
 }
