--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -24,6 +24,7 @@
   <div class="container">
     <!-- Story of the game -->
     <div class="column">
+      <h2>Before the battle, there was tragedy</h2>
       <p>After the lovely family dog ceased to be, the parents of the mournful child  endeavored to bring little Buddy back to the mortal plane. Using ancient arcane sorcery on a thunder night, the couple sprang into action to break down the barriers between life and death.
       At the beginning, the taboo ritual went as planned, and it would have gone as well, if not for a intruding fly; only the small flapping of wings, and a sneeze as loud as thunder, were enough to break the containment of the spell.
       The canine remained in its box, but other tenants gave their first steps that night.
@@ -41,33 +42,44 @@
   </div>
 
   <div class="container">
-    <!-- Story of the game -->
-    <div class="column">
-      <h2>Arm up and play!</h2>
-      <h3>Armed conflict has never seen a scale like this, and the participants are not capable of picking up a traditional weapon.
+    <!-- test state -->
+    <ion-grid>
+      <ion-row>
+        <div class="column">
+          <h2>Arm up and play!</h2>
+        </div>
+      </ion-row>
+      <ion-row>
+        <div class="column">
+          <img src="assets\images\Level.png" alt="Map Image" class="levelImage">
+        </div>
+      </ion-row>
+      <ion-row>
+        <h3>Armed conflict has never seen a scale like this, and the participants are not capable of picking up a traditional weapon.
         These little warriors, using their meager resources and ingenuity, manage to battle.
         Tour the family home and destroy your enemies. Shoot first, shoot later.</h3>
-    </div>
-    <div class="column">
-      <img src="assets\images\Grave_Image.PNG" alt="Gameplay shoot">
-    </div>
+      </ion-row>
+    </ion-grid>
   </div>
 
   <div class="container">
     <!-- Story of the game -->
     <div class="column">
       <h2>The name of the game is BATTLE!</h2>
-      <ion-button>Download the User Manual</ion-button>
+      <ion-button>Read the User Manual</ion-button>
     </div>
     <div class="column">
       <!-- Technical manual -->
       <h2>Discover the inner workings of this world!</h2>
-      <ion-button>Download the Tech Manual</ion-button>
+      <ion-button>Read the Tech Manual</ion-button>
     </div>
   </div>
 
   <div class="container">
-    <h1>Tell us what you think from 1 to 10</h1>
+    <div class="column">
+      <h1>Tell us what you think</h1>
+      <ion-button>Review videogame</ion-button>
+    </div>
   </div>
 
   <ion-footer >
