Add link to review page

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -78,7 +78,7 @@
   <div class="container">
     <div class="column">
       <h1>Tell us what you think</h1>
-      <ion-button>Review videogame</ion-button>
+      <ion-button routerLink="/review">Review videogame</ion-button>
     </div>
   </div>
 
