--- a/src/app/review/review.page.html
+++ b/src/app/review/review.page.html
@@ -1,9 +1,76 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>review</ion-title>
+  <ion-toolbar color="primary">
+    <!-- Logo of the game -->
+    <ion-avatar slot="start">
+      <ion-img src="assets\images\Game_Logo.PNG"></ion-img>
+    </ion-avatar>
+    <!-- Title of the game -->
+    <ion-title>
+      Toy Rampage
+    </ion-title>
+    <!-- <ion-button>PLAY ME!</ion-button> -->
+    <ion-buttons slot="end">
+      <ion-button bgcolor="secondary">
+        <b>PLAY ME!</b>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+  <h1>Score our work from 1 to 10 to know how we can improve</h1>
+  <ion-list>
+    <ion-item>
+      <!-- Gameplay -->
+      <ion-label position="floating">Gameplay</ion-label>
+      <ion-input type="number" min="1" max="10" required></ion-input>
+    </ion-item>
+    <ion-item>
+      <!-- Music -->
+      <ion-label position="floating">Music</ion-label>
+      <ion-input type="number" min="1" max="10" required></ion-input>
+    </ion-item>
+    <ion-item>
+      <!-- Design -->
+      <ion-label position="floating">Design</ion-label>
+      <ion-input type="number" min="1" max="10" required></ion-input>
+    </ion-item>
+    <ion-item>
+      <!-- Story -->
+      <ion-label position="floating">Story</ion-label>
+      <ion-input type="number" min="1" max="10" required></ion-input>
+    </ion-item>
+    <ion-item>
+      <!-- Difficulty -->
+      <ion-label position="floating">Difficulty</ion-label>
+      <ion-input type="number" min="1" max="10" required></ion-input>
+    </ion-item>
+    <ion-item>
+      <!-- Difficulty -->
+      <ion-label position="floating">Extra Comments</ion-label>
+      <ion-textarea></ion-textarea>
+    </ion-item>
+  </ion-list>
+  <ion-button expand="block">Submit</ion-button>
 
+  <ion-footer >
+    <ion-toolbar color="secondary">
+      <ion-row>
+        <ion-col size="2">
+          <!-- Logo of the game -->
+          <img src="assets\images\UTCH_Logo.png" alt="Logo">
+        </ion-col>
+        <ion-col size="5">
+          <!-- Second column content goes here -->
+          <p>Angel Carballo Macias</p>
+          <p> Cesar Erives Chavez</p>
+          <p>Canek Eleazar Torralba Ruiz</p>
+        </ion-col>
+        <ion-col size="5">
+          <h1>Group: IDGSBIS101N</h1>
+          <h4>Tutor: Proffesor Roberto Aguirre Rodriguez</h4>
+        </ion-col>
+      </ion-row>
+    </ion-toolbar>
+  </ion-footer>
 </ion-content>
