--- a/src/app/review/review.page.html
+++ b/src/app/review/review.page.html
@@ -6,7 +6,7 @@
     </ion-avatar>
     <!-- Title of the game -->
     <ion-title>
-      Toy Rampage
+      Toy Rampage | Reviews
     </ion-title>
     <!-- <ion-button>PLAY ME!</ion-button> -->
     <ion-buttons slot="end">
