Add Hyperlink to Technical and User Manual

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -34,7 +34,7 @@
       No Act GuyTM stayed with their arms crossed.
       No  Fashion LassTM remained in one place.
       The forgotten ones wanted payback for their long slumber, and blamed the favorites for their ill fate.
-      This  is the dawn of a new type of conflict, to call it a war is misleading: this is a Toy Rampage.</p>
+      This  is the dawn of a new type of conflict, to call it a war is misleading: this is a <b>Toy Rampage</b>.</p>
     </div>
     <div class="column">
       <img src="assets\images\Grave_Image.PNG" alt="Grave image">
@@ -63,15 +63,15 @@
   </div>
 
   <div class="container">
-    <!-- Story of the game -->
+    <!-- User Manual -->
     <div class="column">
       <h2>The name of the game is BATTLE!</h2>
-      <ion-button>Read the User Manual</ion-button>
+      <ion-button href="https://drive.google.com/file/d/1iaRSx51Eg2IBNgWxDmDFdrWbsfACEtE5/view?usp=sharing" target="_blank">Read the User Manual</ion-button>
     </div>
     <div class="column">
       <!-- Technical manual -->
       <h2>Discover the inner workings of this world!</h2>
-      <ion-button>Read the Tech Manual</ion-button>
+      <ion-button href="https://drive.google.com/file/d/17Bd8VkEDbGkE9_wrxg-ke9EoxSsbfNLE/view?usp=sharing" target="_blank">Read the Tech Manual</ion-button>
     </div>
   </div>
 
