--- a/src/app/review/review.page.scss
+++ b/src/app/review/review.page.scss
@@ -6,6 +6,13 @@ ion-content {
     --background: linear-gradient(to bottom, #097973, #103479, #3a045e);
 }
 
+.reviewForm {
+    --background: rgba(86, 10, 121, 0.212);
+}
+
+.comment {
+    --background: rgba(10, 121, 47, 0.212);
+}
 
 .background-div {
     height: 100%;
